k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monux-auth-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: monux.robjte.de
    http:
      paths:
      - backend:
          serviceName: monux-auth-proxy
          servicePort: 80
  tls:
  - hosts:
    - monux.robjte.de
    - www.monux.robjte.de
    secretName: letsencrypt-prod
